feat: some styling tweaks

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
         </ul>
       </section>
       <div class="relative w-full h-full">
-        <img src="https://picsum.photos/600/600?random=0" class="absolute right-full w-full h-full top-0 z-[-1]"
+        <img src="https://picsum.photos/600/600?random=0" class="absolute transition-[left] duration-1000 -left-full w-full h-full top-0 z-[-1]"
           id="photo-0">
-        <img src="https://picsum.photos/600/600?random=1" class="w-full h-full" id="photo-1">
-        <img src="https://picsum.photos/600/600?random=2" class="absolute left-full w-full h-full top-0 z-[-1]"
+        <img src="https://picsum.photos/600/600?random=1" class="absolute transition-[left] duration-1000 w-full h-full left-0" id="photo-1">
+        <img src="https://picsum.photos/600/600?random=2" class="absolute transition-[left] duration-1000 left-full w-full h-full top-0 z-[-1]"
           id="photo-2">
         <div class="absolute right-0 bottom-0 bg-[#F5F0EC]">
           <button class="p-4" id="photo-previous">
