--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     </nav>
 
     <!-- main -->
-    <main class="flex items-center h-[calc(100vh-72px)] bg-[#DCC1AB] gap-16">
-      <section class="px-16">
+    <main class="flex items-center h-[calc(100vh-72px)] w-full">
+      <section class="px-16 bg-[#DCC1AB] h-full flex flex-col justify-center w-1/2">
         <h1 class="text-6xl mb-12 font-medium">Nowoczesna aranżacja Twojego ogrodu</h1>
         <p class="mb-20">Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka realizacji. Oferujemy
           kompleksowy zakres usług z indywidualnym podejściem do każdego projektu.</p>
@@ -85,7 +85,7 @@
           </a>
         </ul>
       </section>
-      <div class="relative w-full h-full">
+      <div class="relative h-full w-1/2">
         <img src="https://picsum.photos/600/600?random=0" class="absolute transition-[left] duration-1000 -left-full w-full h-full top-0 z-[-1]"
           id="photo-0">
         <img src="https://picsum.photos/600/600?random=1" class="absolute transition-[left] duration-1000 w-full h-full left-0" id="photo-1">
