--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <!-- main -->
     <main class="flex items-center h-[calc(100vh-72px)] w-full">
-      <section class="px-16 bg-[#DCC1AB] h-full flex flex-col justify-center w-1/2">
+      <section class="relative px-16 bg-[#DCC1AB] h-full flex flex-col justify-center w-1/2">
         <h1 class="text-6xl mb-12 font-medium">Nowoczesna aranżacja Twojego ogrodu</h1>
         <p class="mb-20">Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka realizacji. Oferujemy
           kompleksowy zakres usług z indywidualnym podejściem do każdego projektu.</p>
@@ -85,27 +85,27 @@
           </a>
         </ul>
       </section>
-      <div class="relative h-full w-1/2">
-        <img src="https://picsum.photos/600/600?random=0" class="absolute transition-[left] duration-1000 -left-full w-full h-full top-0 z-[-1]"
+      <div class="bg-transparent h-full w-1/2">
+        <img src="https://picsum.photos/600/600?random=0" class="absolute w-full h-full transition-transform duration-1000"
           id="photo-0">
-        <img src="https://picsum.photos/600/600?random=1" class="absolute transition-[left] duration-1000 w-full h-full left-0" id="photo-1">
-        <img src="https://picsum.photos/600/600?random=2" class="absolute transition-[left] duration-1000 left-full w-full h-full top-0 z-[-1]"
+        <img src="https://picsum.photos/600/600?random=1" class="absolute w-full h-full transition-transform duration-1000"
+          id="photo-1">
+        <img src="https://picsum.photos/600/600?random=2" class="absolute w-full h-full transition-transform duration-1000"
           id="photo-2">
-        <div class="absolute right-0 bottom-0 bg-[#F5F0EC]">
-          <button class="p-4" id="photo-previous">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="w-6 h-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
-            </svg>
-          </button>
-          <button class="p-4" id="photo-next">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="w-6 h-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
-            </svg>
-          </button>
-        </div>
       </div>
+      <div class="absolute right-0 bottom-0 bg-[#F5F0EC]">
+        <button class="p-4" id="photo-previous">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
+          </svg>
+        </button>
+        <button class="p-4" id="photo-next">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+          </svg>
+        </button>
       </div>
     </main>
   </body>
