feat: another slider approach

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </nav>
 
     <!-- main -->
-    <main class="flex items-center h-[calc(100vh-72px)] w-full">
+    <main class="flex items-center h-[calc(100vh-72px)] w-full isolate">
       <section class="relative px-16 bg-[#DCC1AB] h-full flex flex-col justify-center w-1/2">
         <h1 class="text-6xl mb-12 font-medium">Nowoczesna aranżacja Twojego ogrodu</h1>
         <p class="mb-20">Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka realizacji. Oferujemy
@@ -85,7 +85,7 @@
           </a>
         </ul>
       </section>
-      <div class="bg-transparent h-full w-1/2">
+      <div class="bg-transparent h-full w-1/2 z-[-1]">
         <img src="https://picsum.photos/600/600?random=0" class="absolute w-full h-full transition-transform duration-1000"
           id="photo-0">
         <img src="https://picsum.photos/600/600?random=1" class="absolute w-full h-full transition-transform duration-1000"
