feat: add support for previous photo

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </a>
         </ul>
       </section>
-      <div class="bg-transparent h-full w-1/2 z-[-1]">
+      <div class="relative bg-transparent h-full w-1/2 z-[-1]">
         <img src="https://picsum.photos/600/600?random=0" class="absolute w-full h-full transition-transform duration-1000"
           id="photo-0">
         <img src="https://picsum.photos/600/600?random=1" class="absolute w-full h-full transition-transform duration-1000"
