--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
         </ul>
       </section>
       <div class="relative bg-transparent h-full w-1/2 z-[-1]">
-        <img src="https://picsum.photos/600/600?random=0" class="absolute w-full h-full transition-transform duration-1000"
-          id="photo-0">
-        <img src="https://picsum.photos/600/600?random=1" class="absolute w-full h-full transition-transform duration-1000"
-          id="photo-1">
-        <img src="https://picsum.photos/600/600?random=2" class="absolute w-full h-full transition-transform duration-1000"
-          id="photo-2">
+        <img src="https://picsum.photos/600/600?random=0"
+          class="absolute w-full h-full transition-transform duration-1000" id="photo-0">
+        <img src="https://picsum.photos/600/600?random=1"
+          class="absolute w-full h-full transition-transform duration-1000" id="photo-1">
+        <img src="https://picsum.photos/600/600?random=2"
+          class="absolute w-full h-full transition-transform duration-1000" id="photo-2">
       </div>
       <div class="absolute right-0 bottom-0 bg-[#F5F0EC]">
         <button class="p-4" id="photo-previous">
@@ -108,6 +108,78 @@
         </button>
       </div>
     </main>
+
+    <!-- offer -->
+    <section class="bg-[#F5F0EC] w-full h-screen flex flex-col justify-center gap-12">
+      <div class="px-36">
+        <small class="text-[#1B5B31] text-base mb-4 block">Oferta</small>
+        <h2 class="text-6xl mb-8 font-medium">
+          Działamy <span class="font-semibold italic">kompleksowo</span>
+        </h2>
+        <p>
+          Oferujemy kompletną obsługę inwestycji terenów zielonych. Projektujemy nowoczesne ogrody przydomowe oraz
+          rezydencjonalne. Stworzymy dla Ciebie projekt, zwizualizujemy go i wcielimy w życie, a na każdym etapie
+          posłużymy radą i wieloletnim doświadczeniem.
+        </p>
+      </div>
+      <div class="px-24 grid grid-cols-3 grid-flow-col grid-rows-[1fr] gap-8">
+        <div class="grid bg-white p-12 rounded-xl cursor-pointer hover:shadow-lg ease-in-out duration-500 transition-all">
+          <svg class="w-12 h-12 mb-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke-width="1.5" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
+          </svg>
+          <h4 class="text-4xl block mb-4">Projekty</h4>
+          <p class="mb-12">Zaprojektujemy Twój ogród w nowoczesnym stylu i z najlepszym wykorzystaniem istniejącej
+            przestrzeni.</p>
+          <a href="#"
+            class="inline-flex w-fit self-end items-center gap-2 text-[#1B5B31] relative after:absolute after:w-0 hover:after:w-full after:duration-500 after:transition-all after:h-[0.0625rem] after:bg-[#1B5B31] after:left-0 after:-bottom-2">
+            Dowiedz się więcej
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="w-4 h-4">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+            </svg>
+          </a>
+        </div>
+        <div class="grid bg-white p-12 rounded-xl cursor-pointer hover:shadow-lg ease-in-out duration-500 transition-all">
+          <svg class="w-12 h-12 mb-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+          </svg>
+          <h4 class="text-4xl block mb-4">Wizualizacje</h4>
+          <p class="mb-12">Przedstawimy Ci projekty koncepcyjne w postaci wirtualnego spaceru animowanego w
+            technologii 3D.</p>
+          <a href="#"
+            class="inline-flex w-fit self-end items-center gap-2 text-[#1B5B31] relative after:absolute after:w-0 hover:after:w-full after:duration-500 after:transition-all after:h-[0.0625rem] after:bg-[#1B5B31] after:left-0 after:-bottom-2">
+            Dowiedz się więcej
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="w-4 h-4">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+            </svg>
+          </a>
+        </div>
+        <div class="grid bg-white p-12 rounded-xl cursor-pointer hover:shadow-lg ease-in-out duration-500 transition-all">
+          <svg class="w-12 h-12 mb-8"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM16.894 20.567L16.5 21.75l-.394-1.183a2.25 2.25 0 00-1.423-1.423L13.5 18.75l1.183-.394a2.25 2.25 0 001.423-1.423l.394-1.183.394 1.183a2.25 2.25 0 001.423 1.423l1.183.394-1.183.394a2.25 2.25 0 00-1.423 1.423z" />
+          </svg>
+          <h4 class="text-4xl block mb-4">Realizacje</h4>
+          <p class="mb-12">Zrealizujemy Twoje marzenie przy użyciu najnowszych rozwiązań i zaawansowanych technologii.
+          </p>
+          <a href="#"
+            class="inline-flex w-fit self-end items-center gap-2 text-[#1B5B31] relative after:absolute after:w-0 hover:after:w-full after:duration-500 after:transition-all after:h-[0.0625rem] after:bg-[#1B5B31] after:left-0 after:-bottom-2">
+            Dowiedz się więcej
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="w-4 h-4">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+            </svg>
+          </a>
+        </div>
+      </div>
+    </section>
   </body>
 
 </html>
