--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="flex gap-12">
         <ul class="flex items-center gap-12">
           <li class="flex gap-1">
-            <button id="offer-dropdown-button" class="relative flex items-center gap-1 text-gray-900 hover:underline hover:underline-offset-[1.75rem]">
+            <button id="offer-dropdown-button" class="relative flex items-center gap-1 text-gray-900 after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-black after:transition-all after:duration-500 hover:after:w-full">
               <span id="offer-dropdown-button">Oferta</span>
               <svg id="offer-dropdown-button" class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
@@ -36,18 +36,18 @@
               </li>
             </ul>
           </li>
-          <li>
-            <a href="#" class="text-gray-900 hover:underline hover:underline-offset-[1.75rem]">O firmie</a>
+          <li class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
+            <a href="#" class="text-gray-900">O firmie</a>
           </li>
-          <li>
-            <a href="#" class="text-gray-900 hover:underline hover:underline-offset-[1.75rem]">Realizacje</a>
+          <li class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
+            <a href="#" class="text-gray-900">Realizacje</a>
           </li>
-          <li>
-            <a href="#" class="text-gray-900 hover:underline hover:underline-offset-[1.75rem]">Kontakt</a>
+          <li class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
+            <a href="#" class="text-gray-900">Kontakt</a>
           </li>
         </ul>
         <div class="relative mx-auto w-max">
-          <input type="search" id="search-input" placeholder="" class="relative z-10 h-12 w-12 cursor-pointer rounded-full border bg-transparent outline-none transition-all ease-in-out focus:w-full focus:pl-12 focus:pr-4" />
+          <input type="search" id="search-input" placeholder="" class="relative z-10 h-12 w-12 cursor-pointer rounded-full border bg-transparent outline-none transition-all ease-in-out focus:w-full focus:pl-12 focus:pr-4 [&:not(:placeholder-shown)]:w-full" />
           <svg class="absolute inset-y-0 h-8 w-12 translate-y-1/4 stroke-gray-500 px-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
           </svg>
