--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
+
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="index.css" />
@@ -15,13 +16,16 @@
       <div class="flex gap-12">
         <ul class="flex items-center gap-12">
           <li class="flex gap-1">
-            <button id="offer-dropdown-button" class="relative flex items-center gap-1 text-gray-900 after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-black after:transition-all after:duration-500 hover:after:w-full">
+            <button id="offer-dropdown-button"
+              class="relative flex items-center gap-1 text-gray-900 after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-black after:transition-all after:duration-500 hover:after:w-full">
               <span id="offer-dropdown-button">Oferta</span>
-              <svg id="offer-dropdown-button" class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
+              <svg id="offer-dropdown-button" class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
               </svg>
             </button>
-            <ul id="offer-dropdown" class="absolute top-20 z-10 hidden rounded-md border border-gray-200 bg-white py-2 shadow-sm">
+            <ul id="offer-dropdown"
+              class="absolute top-20 z-10 hidden rounded-md border border-gray-200 bg-white py-2 shadow-sm">
               <li class="w-full px-4 py-2 hover:bg-gray-100">
                 <a href="#">Strony internetowe</a>
               </li>
@@ -36,20 +40,27 @@
               </li>
             </ul>
           </li>
-          <li class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
+          <li
+            class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
             <a href="#" class="text-gray-900">O firmie</a>
           </li>
-          <li class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
+          <li
+            class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
             <a href="#" class="text-gray-900">Realizacje</a>
           </li>
-          <li class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
+          <li
+            class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
             <a href="#" class="text-gray-900">Kontakt</a>
           </li>
         </ul>
         <div class="relative mx-auto w-max">
-          <input type="search" id="search-input" placeholder="" class="relative z-10 h-12 w-12 cursor-pointer rounded-full border bg-transparent outline-none transition-all ease-in-out focus:w-full focus:pl-12 focus:pr-4 [&:not(:placeholder-shown)]:w-full" />
-          <svg class="absolute inset-y-0 h-8 w-12 translate-y-1/4 stroke-gray-500 px-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+          <input type="search" id="search-input" placeholder=""
+            class="relative z-10 h-12 w-12 cursor-pointer rounded-full border bg-transparent outline-none transition-all ease-in-out focus:w-full focus:pl-12 focus:pr-4 [&:not(:placeholder-shown)]:w-full" />
+          <svg class="absolute inset-y-0 h-8 w-12 translate-y-1/4 stroke-gray-500 px-4"
+            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="h-6 w-6">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
           </svg>
         </div>
       </div>
@@ -59,30 +70,40 @@
     <main class="isolate flex h-[calc(100vh-72px)] w-full items-center">
       <section class="relative flex h-full w-1/2 flex-col justify-center bg-[#DCC1AB] px-16">
         <h1 class="mb-12 text-6xl font-medium">Nowoczesna aranżacja Twojego ogrodu</h1>
-        <p class="mb-20">Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka realizacji. Oferujemy kompleksowy zakres usług z indywidualnym podejściem do każdego projektu.</p>
+        <p class="mb-20">Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka realizacji. Oferujemy
+          kompleksowy zakres usług z indywidualnym podejściem do każdego projektu.</p>
         <ul class="flex gap-9">
-          <a href="#" class="rounded-full bg-[#1B5B31] px-6 py-3 text-white focus:ring-4 focus:ring-[#1B5B31]/50 focus:transition-all focus:ease-in-out"> Skontaktuj się z nami</a>
-          <a href="#" class="flex items-center gap-2 rounded-full border border-[#1B5B31] px-6 py-3 text-[#1B5B31] focus:ring-4 focus:ring-[#1B5B31]/50 focus:transition-all focus:ease-in-out">
+          <a href="#"
+            class="rounded-full bg-[#1B5B31] px-6 py-3 text-white focus:ring-4 hover:ring-2 hover:ring-[#1B5B31]/50 hover:transition-all hover:ease-in-out focus:ring-[#1B5B31]/50 focus:transition-all focus:ease-in-out">
+            Skontaktuj się z nami</a>
+          <a href="#"
+            class="flex items-center gap-2 rounded-full border border-[#1B5B31] hover:ring-2 hover:ring-[#1B5B31]/50 hover:transition-all hover:ease-in-out px-6 py-3 text-[#1B5B31] focus:ring-4 focus:ring-[#1B5B31]/50 focus:transition-all focus:ease-in-out">
             Zobacz nasze realizacje
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="h-4 w-4">
               <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
             </svg>
           </a>
         </ul>
       </section>
       <div class="relative z-[-1] h-full w-1/2 bg-transparent">
-        <img src="https://picsum.photos/600/600?random=0" class="absolute h-full w-full transition-transform duration-1000" id="photo-0" />
-        <img src="https://picsum.photos/600/600?random=1" class="absolute h-full w-full transition-transform duration-1000" id="photo-1" />
-        <img src="https://picsum.photos/600/600?random=2" class="absolute h-full w-full transition-transform duration-1000" id="photo-2" />
+        <img src="https://picsum.photos/600/600?random=0"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-0" />
+        <img src="https://picsum.photos/600/600?random=1"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-1" />
+        <img src="https://picsum.photos/600/600?random=2"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-2" />
       </div>
       <div class="absolute bottom-0 right-0 bg-[#F5F0EC]">
         <button class="p-4" id="photo-previous">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="h-6 w-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
           </svg>
         </button>
         <button class="p-4" id="photo-next">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="h-6 w-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
           </svg>
         </button>
@@ -94,45 +115,88 @@
       <div class="px-36">
         <small class="mb-4 block text-base text-[#1B5B31]">Oferta</small>
         <h2 class="mb-8 text-6xl font-medium">Działamy <span class="font-semibold italic">kompleksowo</span></h2>
-        <p>Oferujemy kompletną obsługę inwestycji terenów zielonych. Projektujemy nowoczesne ogrody przydomowe oraz rezydencjonalne. Stworzymy dla Ciebie projekt, zwizualizujemy go i wcielimy w życie, a na każdym etapie posłużymy radą i wieloletnim doświadczeniem.</p>
+        <p>Oferujemy kompletną obsługę inwestycji terenów zielonych. Projektujemy nowoczesne ogrody przydomowe oraz
+          rezydencjonalne. Stworzymy dla Ciebie projekt, zwizualizujemy go i wcielimy w życie, a na każdym etapie
+          posłużymy radą i wieloletnim doświadczeniem.</p>
       </div>
       <div class="grid grid-flow-col grid-cols-3 grid-rows-[1fr] gap-8 px-24">
-        <div class="grid cursor-pointer rounded-xl bg-white p-12 transition-all duration-500 ease-in-out hover:shadow-lg">
-          <svg class="mb-8 h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
+        <div
+          class="grid cursor-pointer rounded-xl bg-white p-12 transition-all duration-500 ease-in-out hover:shadow-lg">
+          <svg class="mb-8 h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke-width="1.5" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
           </svg>
           <h4 class="mb-4 block text-4xl">Projekty</h4>
-          <p class="mb-12">Zaprojektujemy Twój ogród w nowoczesnym stylu i z najlepszym wykorzystaniem istniejącej przestrzeni.</p>
-          <a href="#" class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-500 hover:after:w-full">
+          <p class="mb-12">Zaprojektujemy Twój ogród w nowoczesnym stylu i z najlepszym wykorzystaniem istniejącej
+            przestrzeni.</p>
+          <a href="#"
+            class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-500 hover:after:w-full">
             Dowiedz się więcej
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="h-4 w-4">
               <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
             </svg>
           </a>
         </div>
-        <div class="grid cursor-pointer rounded-xl bg-white p-12 transition-all duration-500 ease-in-out hover:shadow-lg">
-          <svg class="mb-8 h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
+        <div
+          class="grid cursor-pointer rounded-xl bg-white p-12 transition-all duration-500 ease-in-out hover:shadow-lg">
+          <svg class="mb-8 h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke-width="1.5" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
             <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
           </svg>
           <h4 class="mb-4 block text-4xl">Wizualizacje</h4>
-          <p class="mb-12">Przedstawimy Ci projekty koncepcyjne w postaci wirtualnego spaceru animowanego w technologii 3D.</p>
-          <a href="#" class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-500 hover:after:w-full">
+          <p class="mb-12">Przedstawimy Ci projekty koncepcyjne w postaci wirtualnego spaceru animowanego w technologii
+            3D.</p>
+          <a href="#"
+            class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-500 hover:after:w-full">
             Dowiedz się więcej
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="h-4 w-4">
               <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
             </svg>
           </a>
         </div>
-        <div class="grid cursor-pointer rounded-xl bg-white p-12 transition-all duration-500 ease-in-out hover:shadow-lg">
-          <svg class="mb-8 h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM16.894 20.567L16.5 21.75l-.394-1.183a2.25 2.25 0 00-1.423-1.423L13.5 18.75l1.183-.394a2.25 2.25 0 001.423-1.423l.394-1.183.394 1.183a2.25 2.25 0 001.423 1.423l1.183.394-1.183.394a2.25 2.25 0 00-1.423 1.423z" />
+        <div
+          class="grid cursor-pointer rounded-xl bg-white p-12 transition-all duration-500 ease-in-out hover:shadow-lg">
+          <svg class="mb-8 h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke-width="1.5" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM16.894 20.567L16.5 21.75l-.394-1.183a2.25 2.25 0 00-1.423-1.423L13.5 18.75l1.183-.394a2.25 2.25 0 001.423-1.423l.394-1.183.394 1.183a2.25 2.25 0 001.423 1.423l1.183.394-1.183.394a2.25 2.25 0 00-1.423 1.423z" />
           </svg>
           <h4 class="mb-4 block text-4xl">Realizacje</h4>
-          <p class="mb-12">Zrealizujemy Twoje marzenie przy użyciu najnowszych rozwiązań i zaawansowanych technologii.</p>
-          <a href="#" class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-500 hover:after:w-full">
+          <p class="mb-12">Zrealizujemy Twoje marzenie przy użyciu najnowszych rozwiązań i zaawansowanych technologii.
+          </p>
+          <a href="#"
+            class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-500 hover:after:w-full">
             Dowiedz się więcej
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="h-4 w-4">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+            </svg>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- about -->
+    <section class="flex h-screen w-full items-center">
+      <img src="https://picsum.photos/600/600?random=0" class="h-full w-1/2" id="photo-4" />
+      <div class="relative flex h-full w-1/2 flex-col justify-center bg-[#1B5B31] px-16">
+        <small class="mb-4 block text-base text-white">O firmie</small>
+        <h1 class="mb-12 text-6xl font-medium text-white">Tworzymy <br><span class="italic">z pasją</span></h1>
+        <p class="mb-20 text-white">Każdy projekt to nowe wyzwanie. Dlatego nasz zespół tworzą wykwalifikowani
+          projektanci oraz architekci, których zadaniem jest rozpoznanie i realizacja potrzeb każdego Klienta. Nasza
+          specjalizacja to przestrzenie nowoczesne, które charakteryzuje minimalizm, geometria i elegancka prostota.
+          Tworzymy ogrody małoobsługowe, dostosowane do współczesnego trybu życia.</p>
+        <div>
+          <a href="#"
+            class="inline-flex items-center gap-2 rounded-full border border-white px-6 py-3 text-white hover:ring-2 hover:ring-white/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-white/50 focus:transition-all focus:ease-in-out">
+            Zobacz nasze realizacje
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="h-4 w-4">
               <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
             </svg>
           </a>
@@ -140,4 +204,5 @@
       </div>
     </section>
   </body>
+
 </html>
