--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div>
           <a href="#"
             class="inline-flex items-center gap-2 rounded-full border border-white px-6 py-3 text-white hover:ring-2 hover:ring-white/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-white/50 focus:transition-all focus:ease-in-out">
-            Zobacz nasze realizacje
+            Poznaj nas bliżej
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="h-4 w-4">
               <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
@@ -202,6 +202,53 @@
           </a>
         </div>
       </div>
+    </section>
+
+    <!-- projects -->
+    <section class="flex relative w-full flex-col justify-center gap-12 bg-[#DCC1AB]">
+      <div
+        class="flex justify-center items-end absolute bottom-0 left-0 h-[64rem] w-full z-[1] bg-gradient-to-b from-transparent to-[#DCC1AB]">
+        <a href="#"
+          class="absolute bottom-12 inline-flex items-center gap-2 rounded-full border border-black px-6 py-3 text-black hover:ring-2 hover:ring-black/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-black/50 focus:transition-all focus:ease-in-out">
+          Rozwiń
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="w-4 h-4">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+          </svg>
+        </a>
+      </div>
+      <div class="p-24">
+        <small class="mb-4 block text-base text-[#1B5B31]">Realizacje</small>
+        <h2 class="mb-8 text-6xl font-medium">Nasze <span class="font-semibold italic">projekty</span></h2>
+      </div>
+      <div class="grid grid-cols-3 gap-8 grid-flow-dense">
+        <div class="row-span-2">
+          <img src="https://picsum.photos/600/600?random=0" class="h-full" />
+        </div>
+        <div>
+          <img src="https://picsum.photos/600/600?random=1" class="h-full" />
+        </div>
+        <div>
+          <img src="https://picsum.photos/600/600?random=2" class="h-full" />
+        </div>
+        <div>
+          <img src="https://picsum.photos/600/600?random=3" class="h-full" />
+        </div>
+        <div class="row-span-2">
+          <img src="https://picsum.photos/600/600?random=4" class="h-full" />
+        </div>
+        <div>
+          <img src="https://picsum.photos/600/600?random=5" class="h-full" />
+        </div>
+        <div class="row-span-2">
+          <img src="https://picsum.photos/600/600?random=6" class="h-full" />
+        </div>
+        <div>
+          <img src="https://picsum.photos/600/600?random=7" class="h-full" />
+        </div>
+        <div>
+          <img src="https://picsum.photos/600/600?random=8" class="h-full" />
+        </div>
     </section>
   </body>
 
