feat: add contact

--- a/index.html
+++ b/index.html
@@ -250,6 +250,21 @@
           <img src="https://picsum.photos/600/600?random=8" class="h-full" />
         </div>
     </section>
+
+    <!-- contact -->
+    <div class="flex items-center justify-center px-48 py-16 bg-[#F5F0EC]">
+      <div class="bg-[#1B5B31] flex items-center justify-center text-white p-24 gap-16">
+        <h3 class="text-5xl">Zostańmy w kontakcie!
+          <br>Znajdziesz nas na <span class="font-medium">Instagramie.</span>
+        </h3>
+        <div class="flex flex-col justify-between gap-8">
+          <p>Śledź nasze najnowsze realizacje!</p>
+          <a href="#"
+            class="flex self-start items-center justify-center rounded-full bg-[#F5F0EC] px-6 py-3 focus:ring-4 hover:ring-2 hover:bg-[#F5F0EC]/50 hover:transition-all hover:ease-in-out focus:bg-[#F5F0EC]/50 focus:transition-all focus:ease-in-out text-[#1B5B31]">
+            Instagram</a>
+        </div>
+      </div>
+    </div>
   </body>
 
 </html>
