--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body class="overflow-x-hidden">
     <!-- nav -->
-    <nav class="flex h-[72px] items-center justify-between bg-white px-20 py-6 shadow-md">
+    <nav class="flex sticky z-[1] top-0 h-[72px] items-center justify-between bg-white px-20 py-6 shadow-md">
       <div>
         <span class="text-2xl text-gray-950"> giard<span class="font-black">design</span> </span>
       </div>
