--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     </section>
 
     <section class="flex h-auto w-full bg-[#1B5B31] lg:h-screen">
-      <img src="https://picsum.photos/600/600?random=0" class="hidden h-full w-1/2 lg:block" id="photo-4" />
+      <img src="https://picsum.photos/600/600?random=0" class="hidden h-full w-1/2 lg:block" id="photo-3" />
       <div class="relative flex h-full w-full flex-col justify-center px-4 py-16 lg:px-20">
         <small class="mb-4 block text-base text-white">O firmie</small>
         <h2 class="mb-12 text-4xl font-medium text-white lg:text-5xl">
@@ -250,68 +250,50 @@
         </h2>
       </div>
       <div class="grid grid-flow-dense grid-cols-1 gap-1 lg:grid-cols-3">
-        <div
-          id="photo-100-clickable"
+        <div id="photo-4-clickable"
           class="group relative flex w-auto cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:transition-transform hover:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="https://picsum.photos/600/600?random=0"
-            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
-            id="photo-10" />
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000">
         </div>
-        <div
-          id="photo-101-clickable"
+        <div id="photo-5-clickable"
           class="group relative row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="https://picsum.photos/600/600?random=1"
-            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
-            id="photo-11" />
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000">
         </div>
-        <div
-          id="photo-102-clickable"
+        <div id="photo-6-clickable"
           class="group relative row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="https://picsum.photos/600/600?random=2"
-            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
-            id="photo-12" />
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000">
         </div>
-        <div
-          id="photo-103-clickable"
+        <div id="photo-7-clickable"
           class="group relative flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="https://picsum.photos/600/600?random=3"
-            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
-            id="photo-13" />
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000">
         </div>
-        <div
-          id="photo-104-clickable"
+        <div id="photo-8-clickable"
           class="group relative flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="https://picsum.photos/600/600?random=4"
-            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
-            id="photo-14" />
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000">
         </div>
-        <div
-          id="photo-105-clickable"
+        <div id="photo-9-clickable"
           class="group relative flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="https://picsum.photos/600/600?random=5"
-            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
-            id="photo-15" />
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000">
         </div>
-        <div
-          id="photo-106-clickable"
+        <div id="photo-10-clickable"
           class="group relative row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="https://picsum.photos/600/600?random=6"
-            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
-            id="photo-16" />
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000">
         </div>
-        <div
-          id="photo-107-clickable"
+        <div id="photo-11-clickable"
           class="group relative flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="https://picsum.photos/600/600?random=7"
-            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
-            id="photo-17" />
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000">
         </div>
-        <div
-          id="photo-108-clickable"
+        <div id="photo-12-clickable"
           class="group relative row-span-2 flex cursor-zoom-in items-center justify-center overflow-hidden transition-colors ease-in-out after:absolute after:left-0 after:top-0 after:h-full after:w-full after:bg-transparent after:transition-colors after:duration-1000 hover:after:bg-black/50 hover:after:transition-colors hover:after:duration-1000">
           <img src="https://picsum.photos/600/600?random=8"
-            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000"
-            id="photo-18" />
+            class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105 group-hover:transition-transform group-hover:duration-1000">
         </div>
       </div>
     </section>
@@ -421,26 +403,26 @@
       </ul>
     </footer>
 
-    <dialog id="photos-dialog" class="absolute top-48 w-screen h-full bg-transparent backdrop:bg-black">
-      <div class="relative hidden h-full w-1/2 bg-transparent lg:block translate-x-1/2 overflow-hidden">
+    <dialog id="photos-dialog" class="backdrop:bg-white/50 w-2/5 h-4/5">
+      <div class="relative h-full overflow-hidden">
         <img src="https://picsum.photos/600/600?random=0"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-100" />
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-4" />
         <img src="https://picsum.photos/600/600?random=1"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-101" />
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-5" />
         <img src="https://picsum.photos/600/600?random=2"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-102" />
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-6" />
         <img src="https://picsum.photos/600/600?random=3"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-103" />
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-7" />
         <img src="https://picsum.photos/600/600?random=4"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-104" />
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-8" />
         <img src="https://picsum.photos/600/600?random=5"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-105" />
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-9" />
         <img src="https://picsum.photos/600/600?random=6"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-106" />
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-10" />
         <img src="https://picsum.photos/600/600?random=7"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-107" />
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-11" />
         <img src="https://picsum.photos/600/600?random=8"
-          class="absolute h-full w-full transition-transform duration-1000" id="photo-108" />
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-12" />
 
         <div class="absolute w-full h-full">
           <button class="absolute p-4 top-1/2 bg-[#F5F0EC]" id="photo-previous2">
